--- a/ToHtml5/6_2日程安排.md
+++ b/ToHtml5/6_2日程安排.md
@@ -11,3 +11,16 @@
 - 把公司代码中的 project.json "noCache"改成 true.
 
 上面的事情做完后，应该能够让项目跑起来。
+
+#### 解决方案
+
+1.main.js
+
+    cc.LoaderScene.preload(g_resources, function () {
+        gameScene = new GovNtfDialogLayer();
+        cc.director.runScene(gameScene);
+    }, this);
+
+这里改完之后，应该就能看到文字了。
+
+2.
