--- a/ToHtml5/7_4.md
+++ b/ToHtml5/7_4.md
@@ -1,4 +1,9 @@
 ## PROBLEM NOW
 
-replayID 41328 我的图片有问题太大了。
-replayID 41331 okay.
+replayID 41328 3人 我的图片有问题太大了。
+
+replayID 41331 3人 okay.
+
+##
+
+点击自动暂停功能。
